--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.ravi</groupId>
-	<artifactId>dicegame</artifactId>
+	<artifactId>Dice_Project</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
